# edge

./: .gitignore  CONTRIBUTORS.md  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: tests.yml
licenses/: parameterized
src/edge/: __main__.py  cli.py
src/edge/core/: feedback.py  find.py  mutate.py
src/edge/core/enums/: ActionEnums.py
src/edge/core/models/: ReportModels.py  RuntimeContext.py
src/edge/core/state/: Routine.py  Step.py
src/edge/startup/commands/: start_docker.py  start_frigate.py
src/edge/startup/config/: startup.yml
src/edge/startup/models/: StartupModels.py
src/edge/startup/routines/: BootstrapRoutine.py  StartDockerRoutine.py  StartFrigateRoutine.py
src/edge/state/commands/: status_cache_mount.py  status_docker.py  status_frigate.py  status_storage_mount.py
src/edge/state/routines/: CacheStatusRoutine.py  DockerStatusRoutine.py  FrigateStatusRoutine.py  StorageStatusRoutine.py
tests/unit/: test_find.py  test_mutate.py  test_routine.py  test_start_docker.py  test_start_frigate.py  test_status_cache_mount.py  test_status_docker.py  test_status_frigate.py  test_status_storage_mount.py
