[project]
name = "edge"
version = "0.1.0"
description = ""
authors = [
    {name = "Cody A.",email = "qwertivore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "edge", from = "src"}]

[tool.poetry.scripts]
edge = "edge.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "parameterized (>=0.9.0,<0.10.0)"
]